--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -7,16 +7,33 @@
   margin-bottom: 30px;
   box-shadow: 0 3px 5px -1px #0003, 0 6px 10px #00000024, 0 1px 18px #0000001f;
 
-  .navbar__settings {
+  &__settings {
     display: flex;
     align-items: center;
     margin-left: auto;
+    @media (max-width: 900px) {
+      margin-left: 0;
+      margin-top: 10px;
+    }
+  }
+  &__setting_select_list {
+    cursor: pointer;
   }
 
-  .navbar__setting {
+  &__setting {
     margin-right: 20px;
     display: flex;
     align-items: center;
+  }
+
+  .settings__container {
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+    @media (max-width: 900px) {
+      flex-direction: column;
+      gap: 5px;
+    }
   }
 
   .switch {
@@ -116,7 +133,7 @@
     font-size: 24px;
   }
 
-  &__menu {
+  &__menu_button {
     color: aliceblue !important;
     border: 1px solid aliceblue;
   }
@@ -130,6 +147,12 @@
       text-decoration: none;
       border-color: aliceblue;
     }
+  }
+
+  &__register-login-btn {
+    border: 1px solid aliceblue;
+    border-radius: 5px;
+    padding: 7px;
   }
 
   &__logout {
