--- a/src/app/components/prepared-recipe-history/prepared-recipe-history.component.scss
+++ b/src/app/components/prepared-recipe-history/prepared-recipe-history.component.scss
@@ -1,13 +1,3 @@
-@media print {
-  .action {
-    display: none !important;
-  }
-
-  .action_column {
-    display: none !important;
-  }
-}
-
 .container {
   padding: 10px;
 
@@ -92,30 +82,9 @@
     }
   }
 
-  .quantities_container {
+  .recipes_container {
     width: 100%;
     overflow-x: auto;
     padding: 0 30px;
-
-    .quantity-row {
-      cursor: pointer;
-    }
-
-    .action_column {
-      width: 5%;
-    }
-  }
-
-  .status-icon {
-    vertical-align: middle;
-    margin-right: 5px;
-  }
-
-  .expiring-soon {
-    color: orange;
-  }
-
-  .expired {
-    color: red;
   }
 }
