--- a/src/app/components/recipe/recipe-details/recipe-details.component.scss
+++ b/src/app/components/recipe/recipe-details/recipe-details.component.scss
@@ -27,6 +27,10 @@
         object-fit: fill;
         width: 400px;
         height: 400px;
+        @media (max-width: 900px) {
+          max-width: 100%;
+          height: auto;
+        }
       }
     }
 
@@ -34,6 +38,9 @@
       font-size: 60px;
       font-weight: bold;
       margin: 50px 0;
+      @media (max-width: 900px) {
+        line-height: normal;
+      }
     }
 
     &__description {
