--- a/src/app/components/recipe/recipe-form/recipe-form.component.html
+++ b/src/app/components/recipe/recipe-form/recipe-form.component.html
@@ -16,7 +16,6 @@
               <mat-label>{{ "CATEGORY.NAME" | translate }}</mat-label>
               <input matInput fullwidth formControlName="name" required />
             </mat-form-field>
-
             <div class="input_file_container">
               <button
                 type="button"
@@ -38,7 +37,7 @@
           <div class="input_field">
             <mat-form-field appearance="fill" class="input_field">
               <mat-label>{{ "RECIPE.CATEGORIES" | translate }}</mat-label>
-              <mat-select formArrayName="categories" multiple>
+              <mat-select formArrayName="categories" multiple required>
                 <mat-option
                   *ngFor="let category of categories; let i = index"
                   [value]="category.id"
@@ -48,20 +47,22 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-
+            <div *ngIf="selectedCategories.length === 0" class="error_message">
+              {{ "RECIPE.ERROR.CATEGORY_REQUIRED" | translate }}
+            </div>
             <div
               *ngIf="selectedCategories.length > 0"
               class="selected_category__container"
             >
-              <div
-                *ngFor="let category of selectedCategories; let i = index"
-                class="selected_category"
-              >
-                {{ category.name }}
-                <button mat-icon-button (click)="removeCategory(i)">
-                  <mat-icon>x</mat-icon>
-                </button>
-              </div>
+              <mat-chip-set>
+                <mat-chip
+                  *ngFor="let category of selectedCategories; let i = index"
+                  (removed)="removeCategory(i)"
+                >
+                  {{ category.name }}
+                  <mat-icon matChipRemove>cancel</mat-icon>
+                </mat-chip>
+              </mat-chip-set>
             </div>
           </div>
         </div>
@@ -84,7 +85,6 @@
         >
           {{ "INGREDIENT.ADD_INGREDIENT" | translate }}
         </button>
-
         <div
           formArrayName="selectedIngredients"
           class="recipe_selected_ingredients__container"
@@ -96,19 +96,24 @@
           >
             <mat-form-field appearance="fill">
               <mat-label>{{ "RECIPE.INGREDIENTS" | translate }}</mat-label>
-              <mat-select
-                (selectionChange)="onIngredientSelected($event, i)"
-                formControlName="selectedIngredient"
+              <input
+                type="text"
+                matInput
+                [matAutocomplete]="autoIngredient"
+                formControlName="selectedIngredientInput"
+              />
+              <mat-autocomplete
+                #autoIngredient="matAutocomplete"
+                (optionSelected)="onIngredientSelected($event.option.value, i)"
               >
                 <mat-option
-                  *ngFor="let ingredient of ingredients"
-                  [value]="ingredient.id"
+                  *ngFor="let ingredient of filteredIngredients | async"
+                  [value]="ingredient"
                 >
                   {{ ingredient.name }}
                 </mat-option>
-              </mat-select>
+              </mat-autocomplete>
             </mat-form-field>
-
             <mat-form-field appearance="fill">
               <mat-label>{{ "INGREDIENT.QUANTITY" | translate }}</mat-label>
               <input
@@ -116,22 +121,18 @@
                 type="number"
                 formControlName="selectedIngredientQuantity"
                 placeholder="Quantity"
-                (input)="onIngredientQuantityChanged($event.target, i)"
+                required
               />
             </mat-form-field>
-
             <mat-form-field appearance="fill">
-              <mat-label> {{ "INGREDIENT.UNIT" | translate }}</mat-label>
-              <mat-select
-                formControlName="selectedIngredientUnit"
-                (selectionChange)="onIngredientUnitChanged($event, i)"
-                required
-              >
+              <mat-label>{{ "INGREDIENT.UNIT" | translate }}</mat-label>
+              <mat-select formControlName="selectedIngredientUnit" required>
                 <mat-option
                   *ngFor="let unitOption of unit"
                   [value]="unitOption"
-                  >{{ unitOption }}</mat-option
                 >
+                  {{ unitOption }}
+                </mat-option>
               </mat-select>
             </mat-form-field>
             <button
@@ -145,11 +146,14 @@
             </button>
           </div>
         </div>
+        <div *ngIf="selectedIngredients.length === 0" class="error_message">
+          {{ "RECIPE.ERROR.INGREDIENT_REQUIRED" | translate }}
+        </div>
       </div>
       <div class="recipe_description_container">
         <div class="form-group">
-          <label for="description">
-            {{ "CATEGORY.DESCRIPTION" | translate }}:</label
+          <label for="description"
+            >{{ "CATEGORY.DESCRIPTION" | translate }}:</label
           >
           <editor
             apiKey="c8qwc5cv96qiwizuswzet80gvul391n2juf3v14t1vs4rcem"
@@ -158,7 +162,6 @@
             required
           ></editor>
         </div>
-
         <div class="form-group">
           <label for="cookingInstructions"
             >{{ "RECIPE.COOKING_INSTRUCTION" | translate }}:</label
@@ -170,6 +173,7 @@
             required
           ></editor>
         </div>
-      </div></form
-  ></mat-card>
+      </div>
+    </form>
+  </mat-card>
 </div>
