--- a/src/app/components/auth/login/login.component.scss
+++ b/src/app/components/auth/login/login.component.scss
@@ -5,11 +5,15 @@
   display: flex;
   flex-direction: column;
 
+  .forgot_password_link {
+    color: var(--text-color);
+  }
+
   .buttons_container {
     display: flex;
     justify-content: space-between;
 
-    .btn{
+    .btn {
       width: 100%;
     }
   }
