--- a/src/app/components/category/category-table/category.component.html
+++ b/src/app/components/category/category-table/category.component.html
@@ -24,6 +24,7 @@
         {{ "CATEGORY.STATISTICS" | translate }}
       </button>
       <button
+        *ngIf="userRole === 'Manager'"
         mat-raised-button
         color="primary"
         class="add-category-button"
@@ -56,6 +57,7 @@
           <div class="actions">
             <button
               mat-icon-button
+              *ngIf="userRole === 'Manager'"
               color="warn"
               class="delete-button"
               (click)="
@@ -66,6 +68,7 @@
             </button>
             <button
               mat-icon-button
+              *ngIf="userRole === 'Manager'"
               (click)="
                 openOperationModal('edit', category); $event.stopPropagation()
               "
