--- a/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
+++ b/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
@@ -51,12 +51,16 @@
         mat-raised-button
         color="primary"
         class="add-quantity-button"
-        *ngIf="ingredientId !== 0"
+        *ngIf="userRole === 'Manager'"
         (click)="openOperationModal('add', null)"
       >
         {{ "INGREDIENT.ADD_QUANTITY" | translate }}
       </button>
-      <button mat-raised-button (click)="importFromExcel()">
+      <button
+        mat-raised-button
+        *ngIf="userRole === 'Manager'"
+        (click)="importFromExcel()"
+      >
         {{ "INGREDIENT.IMPORT_QTY" | translate }}
       </button>
     </div>
@@ -137,6 +141,7 @@
             mat-icon-button
             color="warn"
             class="delete-button"
+            *ngIf="userRole === 'Manager'"
             (click)="openDeleteConfirmation(row.id); $event.stopPropagation()"
           >
             <mat-icon>delete</mat-icon>
