--- a/src/app/components/modal/email-modal/email-modal.component.html
+++ b/src/app/components/modal/email-modal/email-modal.component.html
@@ -26,7 +26,7 @@
   </div>
   <div class="form-group">
     <button type="button" mat-raised-button (click)="fileInput.click()">
-      {{ "INPUT_TEXT.CHOOSE_FILE" | translate }}
+      {{ "INPUT_TEXT.INSERT_FILE" | translate }}
     </button>
     <input hidden (change)="onFileSelected($event)" #fileInput type="file" />
     <span class="file-name">{{ selectedFile?.name }}</span>
