--- a/src/app/components/used-ingredients/used-ingredients.component.html
+++ b/src/app/components/used-ingredients/used-ingredients.component.html
@@ -70,6 +70,15 @@
         {{ row.quantity.expiringDate | date : "yyyy-MM-dd" }}
       </td>
     </ng-container>
+    <!-- Used Date Column -->
+    <ng-container matColumnDef="quantity.usedDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ "INGREDIENT.USED_DATE" | translate }}
+      </th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.quantity.usedDate | date : "yyyy-MM-dd" }}
+      </td>
+    </ng-container>
     <!-- Price/Unit Column -->
     <ng-container matColumnDef="quantity.price">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
