--- a/src/app/components/prepared-recipe-history/prepared-recipe-history.component.html
+++ b/src/app/components/prepared-recipe-history/prepared-recipe-history.component.html
@@ -99,7 +99,7 @@
       <div *ngIf="isLoading" class="loading-circle-container">
         <mat-spinner diameter="100"></mat-spinner>
       </div>
-      <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]"></mat-paginator>
     </div>
   </div>
   <div *ngIf="activeTab === 'tab2'">
