--- a/src/app/components/used-ingredients/used-ingredients.component.html
+++ b/src/app/components/used-ingredients/used-ingredients.component.html
@@ -104,5 +104,5 @@
   <div *ngIf="isLoading" class="loading-circle-container">
     <mat-spinner diameter="100"></mat-spinner>
   </div>
-  <mat-paginator [pageSizeOptions]="[10, 25, 100]" #paginator1></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]"></mat-paginator>
 </div>
